Fixing responsiveness issues on mobile

--- a/css/all.scss
+++ b/css/all.scss
@@ -5,10 +5,10 @@ body {
   display: grid;
   grid-template-rows: auto 1fr auto;
   min-height: 100vh;
+  height: 100%;
   max-width: 100vw;
   min-width: 100vw;
   margin: 0;
-  overflow: hidden;
   @media only screen and (max-width: 1024px){
     //max-width: 100%;
   }
